--- a/css/index.css
+++ b/css/index.css
@@ -19,13 +19,15 @@ a{
 }
 .header-item{
 	width: 33.333%;
-	 font-size: 0.3rem;
+	 font-size: 0.34rem;
 	 text-align: center;
 	 line-height: 1rem;
 	 color: #fff;
 }
+.header-item>span{
+	padding: 0 0 0 0.3rem;
+}
 .header-item:nth-child(1){
-	 font-size: 0.2rem;
 	 text-align: left;
 	 padding-left: 0.2rem;
 }
@@ -33,7 +35,6 @@ a{
 	font-weight: bold;
 }
 .header-item:nth-child(3){
-	 font-size: 0.3rem;
 	 text-align: right;
 	 padding-right: 0.2rem;
 	 font-weight: bold;
@@ -42,7 +43,7 @@ a{
 width: 16px;
 height: 4px;
 border-radius: 0;
-background: #aa9394;
+background: #222;
 }
 .swiper-pagination-bullet-active {
 	background: #eeebec;
@@ -82,6 +83,7 @@ background: #aa9394;
 .main{
 	width: 100%;
 	box-sizing: border-box;
+	padding-bottom: 1rem;
 }
 .main-box{
 	display:-webkit-box; 
@@ -133,12 +135,12 @@ background: #aa9394;
 	 text-align: center;
 	 color: #bebebe;
 }
-.footer-item-active{
+.footer-item-active span{
 	 color: #fb4747;
 }
 .footer-item img{
 	display: block;
-	width: 0.65rem;
+	width: 0.5rem;
 	margin: auto;
 	margin-top: 0.05rem;
 	margin-bottom: 0.08rem;
@@ -147,6 +149,7 @@ background: #aa9394;
 .main-con{
 		margin-top: 1rem;
 		box-sizing: border-box;
+		padding-bottom: 1rem;
 }
 .list{
 	padding: 0.3rem 0;
@@ -174,22 +177,29 @@ background: #aa9394;
 	width: 100%;
 	height: 100%;
 }
-.list:nth-child(3)>.item-img{
-	display: inline-block;
-	width: 2.1rem;
+.img-box{
+	width: 100%;
+	display:-webkit-box; 
+	display: flex;
+	-webkit-box-pack:justify;
+	justify-content:space-between;
 	height: 1.65rem;
 }
-.list:nth-child(3)>a>img{
-	width: 100%;
+.img-box>.item-img{
+	-webkit-box-flex : 1;
+	flex-grow:1;
+	margin-right: 0.15rem;
+
 }
-.list:nth-child(6)>a{
-	display: inline-block;
-	width: 2.1rem;
-	height: 1.65rem;
+.img-box>.item-img:nth-child(3){
+	margin-right: 0;
+
 }
-.list:nth-child(6)>a>img{
-	width: 100%;
+.img-box>.item-img>img{
+	width: 2.2rem;
 }
+
+
 
 
 
@@ -222,7 +232,6 @@ background: #aa9394;
 	margin-top: 0.2rem;
 	border: none;
 	background: #F7F7F7;
-	border-bottom: 1px solid #BFBFBF;
 }
 .send>input:nth-child(2){
 float: right;
@@ -230,4 +239,27 @@ float: right;
 	background: #FB4747;
 	color: #fff;border: none;
 	border-radius: 2px;
+	padding: 3px;font-size: 0.24rem;
+}
+
+
+
+
+
+
+/*字体图标*/
+@font-face {
+  font-family: 'iconfont';
+  src: url('../font/iconfont.eot');
+  src: url('../font/iconfont.eot?#iefix') format('embedded-opentype'),
+  url('../font/iconfont.woff') format('woff'),
+  url('../font/iconfont.ttf') format('truetype'),
+  url('../font/iconfont.svg#iconfont') format('svg');
+}
+.iconfont{
+  font-family:"iconfont" !important;
+  font-size:0.34rem;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
 }
