--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,7 @@ background: #222;
 .item>a>img{
 	display: block;
 	width: 1rem;
+	height: 1rem;
 	margin: auto;
 	margin-top: 0.5rem;
 	margin-bottom: 0.35rem;
