--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,16 @@
 html,body{
     margin: 0;padding: 0;
+    font-family: helvetica;
+    -webkit-text-size-adjust:100%;
+    -webkit-user-select:none;
 }
 a{
 	text-decoration: none;
 	color: #BFBFBF;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+input{
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .header{	
 	display:-webkit-box; 
@@ -127,6 +134,7 @@ background: #222;
 	background: #f7f7f7;
 	position: fixed;
 	bottom: 0;
+	z-index: 100;
 	border-top: 1px solid #F0F0F0;
 }
 .footer-item{
@@ -185,6 +193,7 @@ background: #222;
 	-webkit-box-pack:justify;
 	justify-content:space-between;
 	height: 1.65rem;
+	overflow: hidden;
 }
 .img-box>.item-img{
 	-webkit-box-flex : 1;
@@ -198,6 +207,7 @@ background: #222;
 }
 .img-box>.item-img>img{
 	width: 2.2rem;
+		height: 1.65rem;
 }
 
 
@@ -233,6 +243,7 @@ background: #222;
 	margin-top: 0.2rem;
 	border: none;
 	background: #F7F7F7;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .send>input:nth-child(2){
 float: right;
@@ -241,8 +252,42 @@ float: right;
 	color: #fff;border: none;
 	border-radius: 2px;
 	padding: 3px;font-size: 0.24rem;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+
+/*玩乐*/
+.img-list{
+	width: 100%;
+	height: 4rem;
+	background: red;
+	margin-top: 0.1rem;
+	overflow: hidden;
+		position: relative;
+}
+.img-list>a{
+	display: block;width: 100%;height: 100%;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
+	
+}
+.img-list>img{
+	width: 100%;
+}
+.title{
+	position: absolute;top: 0;
+	width: 100%;height: 100%;
+	background: rgba(0,0,0,0.5);
+}
+.title>h1{
+	width: 100%;color: #fff;
+	font-size: 0.3rem;text-align: center;
+	margin-top: 1.5rem;
+}
+.title>h2{
+	width: 100%;color: #fff;
+	font-size: 0.24rem;text-align: center;
+}
 
 
 
