--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-html,body{
+html,body,b{
     margin: 0;padding: 0;
     font-family: helvetica;
     -webkit-text-size-adjust:100%;
@@ -26,17 +26,21 @@ input{
 }
 .header-item{
 	width: 33.333%;
-	 font-size: 0.34rem;
+	 font-size: 0.36rem;
 	 text-align: center;
 	 line-height: 1rem;
 	 color: #fff;
 }
 .header-item>span{
-	padding: 0 0 0 0.3rem;
+	padding: 0 0 0 0.4rem;
+}
+.header-item>a{
+	color: #fff;
 }
 .header-item:nth-child(1){
 	 text-align: left;
 	 padding-left: 0.2rem;
+	 float: left;
 }
 .header-item:nth-child(2){
 	font-weight: bold;
@@ -44,8 +48,111 @@ input{
 .header-item:nth-child(3){
 	 text-align: right;
 	 padding-right: 0.2rem;
-	 font-weight: bold;
+
 }
+.search{
+	display: inline-block;
+	width: 6.4rem;
+	height: 0.6rem;
+	background: #fff;
+	margin: 0.2rem 0.15rem;
+	position: relative;
+	border-radius: 0.05rem;
+}
+.header-item:nth-child(1)>a{
+	display: block;
+	float: left;
+}
+.search>input:nth-child(1){
+	position: absolute;
+	width: 5.4rem;
+	border: none;
+	height: 0.6rem;
+	border-radius: 0.05rem;
+	padding-left: 10px;
+}
+.search>input:nth-child(2){
+	position: absolute;
+	width: 1rem;
+	border: none;
+	height: 0.6rem;
+	right: 0;
+	border-radius: 0.05rem;
+	background: #EEEBEC;color: #4A4A4A;
+}
+.list-header{
+	height: 1.2rem;
+	position: relative;
+	padding: 0 0.3rem;
+	box-sizing: border-box;
+}
+.list-header>img{
+	display: inline-block;
+	float: left;
+	margin-top: 0.3rem;
+}
+.list-header>b{
+	font-size: 0.34rem;
+	height: 0.34rem;
+	color: #666666;
+	display: inline-block;
+	float: left;
+	margin-top: 0.43rem;
+	margin-left: 0.2rem;
+}
+.list-header>span{
+	display: inline-block;
+	font-size: 0.3rem;
+	height: 0.3rem;width: 3rem;
+	float: right;
+	margin-top: 0.6rem;
+	border-bottom: 1px solid #F0F0F0;
+	text-align: right;
+	padding-right: 0.3rem;
+	color: #BFBFBF;
+}
+body>.list-con{
+	margin-top: 0;
+}
+.list-wrap{
+	width: 50%;
+	height: 2.428rem;
+	float: left;
+	border-bottom: 1px solid #EEEBEC;
+	border-right: 1px solid #EEEBEC;
+	box-sizing: border-box;
+	padding: 0.2rem;
+}
+.list-wrap:nth-child(1){
+	height: 4.856rem;
+	width: 100%;
+	position: relative;
+	padding: 0;
+	overflow: hidden;
+}
+.list-wrap:nth-child(6){
+	width: 100%;
+	padding: 0.4rem 0.2rem;
+}
+.list-wrap>a>h2{
+	color: #4a4a4a;
+	font-size: 0.32rem;
+}
+.list-wrap>h3{
+	color: #bfbfbf;
+	font-size: 0.24rem;
+}
+.list-wrap:nth-child(1)>a>h2{
+	position: absolute;
+	bottom: 0;
+	color: #fff;
+}
+.list-wrap:nth-child(1)>img{
+	width: 100%;
+}
+
+
+/*轮播图*/
 .swiper-pagination-bullet {
 width: 16px;
 height: 4px;
@@ -164,16 +271,16 @@ background: #222;
 	padding: 0.3rem 0;
 	width: 6.9rem;
 	margin: auto;
-	border-bottom: 1px solid #BFBFBF;
+	border-bottom: 1px solid #F0F0F0;
 	position: relative;
 }
 .list>a>h2{
 	color: #4a4a4a;
-	font-size: 0.3rem;
+	font-size: 0.32rem;
 }
 .list>h3{
 	color: #bfbfbf;
-	font-size: 0.22rem;
+	font-size: 0.24rem;
 }
 .con-img{
 	width: 1.6rem;
@@ -224,8 +331,8 @@ background: #222;
 }
 .main-con>p{
 	color: #666;
-	font-size: 0.24rem;
-	line-height: 0.4rem;
+	font-size: 0.28rem;
+	line-height: 0.5rem;
 }
 .send{
 	width: 100%;
@@ -260,7 +367,6 @@ float: right;
 .img-list{
 	width: 100%;
 	height: 4rem;
-	background: red;
 	margin-top: 0.1rem;
 	overflow: hidden;
 		position: relative;
@@ -293,6 +399,17 @@ float: right;
 
 
 
+/*搜索*/
+.main-con>.tips{
+	font-size: 0.2rem;
+	border: 1px solid #BFBFBF;
+	padding: 6px;
+	border-radius: 20px;
+	display: inline-block;
+}
+
+
+
 /*字体图标*/
 @font-face {
   font-family: 'iconfont';
@@ -304,7 +421,7 @@ float: right;
 }
 .iconfont{
   font-family:"iconfont" !important;
-  font-size:0.34rem;font-style:normal;
+  font-size:0.42rem;font-style:normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
