--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,9 @@
-html,body,b{
+html,body,b,p,ul,li{
     margin: 0;padding: 0;
     font-family: helvetica;
     -webkit-text-size-adjust:100%;
     -webkit-user-select:none;
+    list-style: none;
 }
 a{
 	text-decoration: none;
@@ -11,6 +12,39 @@ a{
 }
 input{
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+#wrapper {
+	position: absolute;
+	z-index: 1;
+	top: 1rem;
+	bottom: 0.93rem;
+	left: 0;
+	width: 100%;
+	background: #fff;
+	overflow: hidden;
+}
+
+#scroller {
+	position: absolute;
+	z-index: 1;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	width: 100%;
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-text-size-adjust: none;
+	-moz-text-size-adjust: none;
+	-ms-text-size-adjust: none;
+	-o-text-size-adjust: none;
+	text-size-adjust: none;
 }
 .header{	
 	display:-webkit-box; 
@@ -23,6 +57,7 @@ input{
 	box-sizing: border-box;
 	position: fixed;
 	top:0;z-index: 100;
+	box-shadow: 0 0 5px rgba(100,100,100,0.7);
 }
 .header-item{
 	width: 33.333%;
@@ -52,7 +87,7 @@ input{
 }
 .search{
 	display: inline-block;
-	width: 6.4rem;
+	width: 90%;
 	height: 0.6rem;
 	background: #fff;
 	margin: 0.2rem 0.15rem;
@@ -70,6 +105,7 @@ input{
 	height: 0.6rem;
 	border-radius: 0.05rem;
 	padding-left: 10px;
+	font-size: 0.3rem;
 }
 .search>input:nth-child(2){
 	position: absolute;
@@ -79,6 +115,7 @@ input{
 	right: 0;
 	border-radius: 0.05rem;
 	background: #EEEBEC;color: #4A4A4A;
+	font-size: 0.3rem;
 }
 .list-header{
 	height: 1.2rem;
@@ -141,14 +178,19 @@ body>.list-con{
 .list-wrap>h3{
 	color: #bfbfbf;
 	font-size: 0.24rem;
+	font-weight: normal;
+	
 }
 .list-wrap:nth-child(1)>a>h2{
 	position: absolute;
 	bottom: 0;
 	color: #fff;
+	padding-left: 0.2rem;
+	box-sizing: border-box;
 }
 .list-wrap:nth-child(1)>img{
 	width: 100%;
+	
 }
 
 
@@ -161,9 +203,6 @@ background: #222;
 }
 .swiper-pagination-bullet-active {
 	background: #eeebec;
-}
-.swiper-container{
-	margin-top: 1rem;
 }
 .swiper-container,.swiper-wrapper,.swiper-slide{
     width: 100%;height: 4.2rem;
@@ -197,7 +236,6 @@ background: #222;
 .main{
 	width: 100%;
 	box-sizing: border-box;
-	padding-bottom: 1rem;
 }
 .main-box{
 	display:-webkit-box; 
@@ -243,6 +281,7 @@ background: #222;
 	bottom: 0;
 	z-index: 100;
 	border-top: 1px solid #F0F0F0;
+	box-shadow: 0 0 5px rgba(200,200,200,0.5);
 }
 .footer-item{
 	 -webkit-box-flex : 1;
@@ -254,25 +293,25 @@ background: #222;
 .footer-item-active span{
 	 color: #fb4747;
 }
-.footer-item img{
+
+.footer-item .iconfont{
 	display: block;
 	width: 0.5rem;
 	margin: auto;
 	margin-top: 0.05rem;
 	margin-bottom: 0.08rem;
+	color: #999999;
 }
-
-.main-con{
-		margin-top: 1rem;
-		box-sizing: border-box;
-		padding-bottom: 1rem;
+.footer-item-active .iconfont{
+	 color: #fb4747;
 }
 .list{
 	padding: 0.3rem 0;
-	width: 6.9rem;
+	width:90%;
 	margin: auto;
 	border-bottom: 1px solid #F0F0F0;
 	position: relative;
+	overflow: hidden;
 }
 .list>a>h2{
 	color: #4a4a4a;
@@ -281,17 +320,28 @@ background: #222;
 .list>h3{
 	color: #bfbfbf;
 	font-size: 0.24rem;
+	font-weight: normal;
+}
+.list-left{
+	width: 70%;
+	float: left;
+}
+.list-left>a>h2{
+	color: #4a4a4a;
+	font-size: 0.32rem;
+}
+.list-left>h3{
+	color: #bfbfbf;
+	font-size: 0.24rem;
+	font-weight: normal;
 }
 .con-img{
-	width: 1.6rem;
-	height: 1.2rem;
-	background: red;
-	position: absolute;
-	right: 0;top: 0;bottom: 0;margin: auto 0;
+	width: 30%;
+	height: 100%;
+	float: left;
 }
 .con-img>img{
 	width: 100%;
-	height: 100%;
 }
 .img-box{
 	width: 100%;
@@ -299,22 +349,24 @@ background: #222;
 	display: flex;
 	-webkit-box-pack:justify;
 	justify-content:space-between;
-	height: 1.65rem;
+	/*height: 1.65rem;*/
 	overflow: hidden;
 }
 .img-box>.item-img{
 	-webkit-box-flex : 1;
 	flex-grow:1;
 	margin-right: 0.15rem;
+	width: 2.2rem;
+	/*height: 1.65rem;*/
 
 }
 .img-box>.item-img:nth-child(3){
 	margin-right: 0;
 
+
 }
 .img-box>.item-img>img{
-	width: 2.2rem;
-		height: 1.65rem;
+	width: 100%;
 }
 
 
@@ -421,8 +473,221 @@ float: right;
 }
 .iconfont{
   font-family:"iconfont" !important;
-  font-size:0.42rem;font-style:normal;
+  font-size:0.46rem;font-style:normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
+}
+
+
+
+/*我的*/
+.photo-wrap{
+	width: 100%;
+	height: 5rem;
+	background: #FC4848;
+	position: relative;
+}
+.photo{
+	width: 2rem;height: 2rem;
+	background: #fff;
+	border-radius: 50%;
+	position: absolute;top: 1rem;left: 0;right: 0;
+	margin: auto;
+	text-align: center;
+}
+.photo>a{
+	display: block;
+	height: 50%;
+	line-height: 2rem;
+}
+.photo>a>span{
+	display: block;
+	font-size: 0.4rem;
+	color: #FC4848;
+}
+.photo-wrap>p{
+	font-size: 0.3rem;color: #fff;text-align: center;
+	position: absolute;bottom: 1rem;left: 0;right: 0;
+}
+.my-nav-wrap{
+	background: #EEEBEC;
+}
+.my-nav-top{
+	display:-webkit-box; 
+	display: flex;
+	-webkit-box-pack:justify;
+	justify-content:space-around;
+	height: 1.1rem;
+	width: 100%;
+	background: #fff;
+}
+.nav-list{
+	-webkit-box-flex : 1;
+	flex-grow:1;
+	font-size: 0.24rem;
+	text-align: center;
+}
+.nav-list>p{
+	padding: 0.05rem 0;
+	color: #FC4848;
+}
+.my-nav-bottom{
+	margin-top: 0.15rem;
+	background: #fff;
+}
+.my-nav-bottom>li{
+	color: #4A4A4A;
+	box-sizing: border-box;
+	height: 1rem;
+	line-height: 1rem;
+	border-bottom: 1px solid #EEEBEC;
+	padding: 0 0.3rem;
+	font-size: 0.3rem;
+}
+.my-nav-bottom>li>span{
+	display: block;float: left;
+}
+
+.my-nav-bottom>li>span:nth-child(3){
+	float: right;
+	font-size: 0.3rem;
+	color: #666666;
+}
+
+.my-nav-bottom>li>b{
+	color: #FC4848;	
+	line-height: 1rem;
+	padding-right: 0.2rem;
+	font-weight: normal;
+	display: block;float: left;
+}
+
+/*登录*/
+.login-icon{
+	width: 2rem;height: 2rem;
+	background: #fff;
+	border-radius: 0.1rem;
+	margin: auto;
+	margin-top: 1.5rem;
+}
+.login{
+	width: 5rem;
+	margin: auto;
+	margin-top: 1rem;
+}
+.login span{
+	padding: 0 0.2rem 0 0;
+	display: inline-block;
+	font-size: 0.5rem;
+	color: #fff;
+	font-weight: normal;
+	border-right: 1px solid #fff;
+	
+}
+
+.login .user{
+	width: 5rem;
+	/*line-height: 1rem;*/
+	border-bottom: 1px solid #EFEFF4;
+	position: relative;
+}
+.login .password{
+	width: 5rem;
+	/*line-height: 1rem;*/
+	border-bottom: 1px solid #EFEFF4;
+	position: relative;
+}
+.login .user input{
+	border: none;
+	background: rgba(0,0,0,0);
+	position: absolute;
+	outline: none;
+	font-size: 0.3rem;
+	padding-left: 0.2rem;
+	line-height: 0.8rem;
+	bottom: 0;
+}
+.login .password input{
+	border: none;
+	background: rgba(0,0,0,0);
+	position: absolute;
+	outline: none;
+	font-size: 0.3rem;
+	padding-left: 0.2rem;
+	line-height: 0.8rem;
+	bottom: 0;
+}
+.error{
+	height: 1rem;
+}
+.submit{
+	width: 4rem;
+	margin: auto;
+}
+.submit>input{
+	background: #FC4848;
+	width: 4rem;
+	height: 1rem;
+	font-size: 0.4rem;
+	text-align: center;
+	color: #fff;border-radius: 0.2rem;
+	border: none;
+
+
+}
+.submit>a{
+	display: block;
+	margin-top: 0.5rem;
+	background: #FC4848;
+	width: 4rem;
+	height: 1rem;
+	font-size: 0.4rem;
+	line-height: 1rem;
+	text-align: center;
+	color: #fff;border-radius: 0.2rem;
+}
+.login-wrap{
+	width: 100%;height: 100%;
+	position: fixed;
+	background: rgba(0,0,0,0.9);
+}
+.login-wrap>.header{
+	background: none;
+}
+
+
+
+.dianzan{
+	padding: 1rem;
+	display:-webkit-box; 
+	display: flex;
+	-webkit-box-pack:justify;
+	justify-content:space-around;
+	border-bottom: 1px solid #EEEEEE;
+}
+.circle{
+	width:1rem;height: 1rem;
+	border: 1px solid #BFBFBF;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 1rem;
+	color: #bfbfbf;
+	font-size: 0.6rem;
+}
+.list p{
+	font-size: 0.3rem;
+	color: #333333;
+}
+.main-con .line{
+	display:block;
+	text-align: center;
+	width: 1.5rem;
+	height: 0.5rem;
+	font-size: 0.3rem;
+	top: -0.2rem;
+	position: relative;left: 0.3rem;
+	background: #fff;
+	color: #BFBFBF;
+	font-weight: bold;
 }
